--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>FONT MANIPULATOR</title>
+  <title>Font Manipulator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -12,9 +12,9 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body background="image.jpg">
+<body>
 <center>
-  <h3 class="btn btn-info heading">Changing width, height and postion of the text in Realtime
+  <h3 class="btn btn-info heading">Changing width, height and postion of a text in Realtime
     <br>
     <span class="note">NOTE - Get your left and right wrist closer 
       to reduce the size of the text and to increase the size of 
@@ -25,9 +25,11 @@
   </h3>
 </center>
  
-<div class="copy_right_footer"> 
+<div class="copy_right_footer">
    Developed by - Shreyansh Agarwal
 </div>
 <script src="main.js"></script>
 </body>
 </html>
+
+
